<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>yier.bubu.redis</groupId>
    <artifactId>yierdis-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>yierdis-parent</name>
    <description>Parent and aggregator for Yierdis modules.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <netty.version>4.1.109.Final</netty.version>
        <slf4j.version>2.0.17</slf4j.version>
        <logback.version>1.5.18</logback.version>
        <junit.version>4.13.2</junit.version>
        <archunit.version>1.4.2</archunit.version>
        <jacoco.version>0.8.14</jacoco.version>
        <shade.version>3.6.0</shade.version>
        <picocli.version>4.7.6</picocli.version>
    </properties>

    <modules>
        <module>yierdis-common</module>
        <module>yierdis-memory</module>
        <module>yierdis-networking</module>
        <module>yierdis-server</module>
        <module>yierdis-command</module>
        <module>yierdis-db</module>
        <module>yierdis-cli</module>
        <module>yierdis-benchmark</module>
        <module>yierdis-tests/yierdis-architecture-tests</module>
        <module>yierdis-tests/yierdis-integration-tests</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit4</artifactId>
                <version>${archunit.version}</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>

            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-networking-custom-v1</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-networking-custom-v1-execution</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-networking-netty</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-common-bytes</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-server-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-db-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-db-testkit</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-db-memory</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-server-runtime-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-command-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-command-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-command-builtin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-server-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-server-runtime</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-memory-ffm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-memory-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-server-executor</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>yier.bubu.redis</groupId>
                <artifactId>yierdis-server-main</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
